[package]
name = "korona"
version = "0.1.0"
authors = ["michal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.5.1", features = ["https-rustls"] }
scraper = "0.12.0"
prettytable-rs = "0.8.0"
colored = "2"